# Hermes

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  design.md  roadmap.md
.github/workflows/: ci.yml
config/: baseline_scenario.yaml  low_pressure_scenario.yaml  observe_scenario.yaml  oom_stress_scenario.yaml  scenario_inference.yaml  scenario_low_memory.yaml  scenario_multimodel.yaml  scenario_training.yaml  schema.yaml  schema_tier_a.yaml  schema_tier_b.yaml  schema_tier_c.yaml
docs/: architecture.md  calibration_guide.md  faq.md  internals.md  operator.md  tuning_guide.md  wsl2_quickstart.md
include/hermes/actions/: active_executor.hpp  cgroup.hpp  dry_run_executor.hpp  kill.hpp  reprioritize.hpp  throttle.hpp
include/hermes/core/: types.hpp
include/hermes/engine/: predictor.hpp  pressure_score.hpp  scheduler.hpp
include/hermes/monitor/: cpu_psi.hpp  gpu_stats.hpp  io_psi.hpp  loadavg.hpp  mem_psi.hpp  nvml_backend.hpp  rich_proc_reader.hpp  vmstat.hpp
include/hermes/profiler/: proc_stat.hpp  process_mapper.hpp  workload_classifier.hpp
include/hermes/replay/: replay_summary.hpp
include/hermes/runtime/: control_socket.hpp  event_bus.hpp  event_logger.hpp  latency_probe.hpp  run_metadata.hpp  scenario_config.hpp  telemetry_quality.hpp
scripts/: bench_gdb.sh  bench_perf.sh  bench_strace.sh  check_evidence_tiers.py  collect_wsl2_evidence.sh  gen_evidence_report.sh  hermes_ci_gate.py  hermes_coverage.py  hermes_diff.py  hermes_doctor.sh  hermes_plot.py  hermes_quickstart.sh  hermes_status.sh  hermes_tune.py  populate_readme_results.py  run_all_smoke.ps1  smoke_active_control.ps1  smoke_all_states.ps1  smoke_benchmark_compare.ps1  smoke_benchmark_hermes.ps1  smoke_benchmark_launch.ps1  smoke_benchmark_plan.ps1  smoke_daemon_replay.ps1  smoke_hermes_doctor.ps1  smoke_pack.ps1  smoke_phase6.sh  smoke_schema.sh  smoke_simulate.ps1  smoke_synthetic_replay.ps1  smoke_web.ps1  smoke_wsl2.sh
src/actions/: active_executor.cpp  cgroup.cpp  dry_run_executor.cpp  kill.cpp  reprioritize.cpp  throttle.cpp
src/cli/: hermes_alert.cpp  hermes_annotate.cpp  hermes_bench.cpp  hermes_budget.cpp  hermes_compare.cpp  hermes_eval.cpp  hermes_export.cpp  hermes_fault.cpp  hermes_journal.cpp  hermes_pack.cpp  hermes_reeval.cpp  hermes_replay.cpp  hermes_report.cpp  hermes_score.cpp  hermes_simulate.cpp  hermes_synth.cpp  hermes_watchdog.cpp  hermes_web.cpp  hermesctl.cpp
src/engine/: predictor.cpp  pressure_score.cpp  scheduler.cpp
src/monitor/: cpu_psi.cpp  gpu_stats.cpp  io_psi.cpp  loadavg.cpp  mem_psi.cpp  nvml_backend.cpp  rich_proc_reader.cpp  vmstat.cpp
src/profiler/: proc_stat.cpp  process_mapper.cpp  workload_classifier.cpp
src/replay/: replay_summary.cpp
src/runtime/: control_socket.cpp  event_logger.cpp  hermesd.cpp  hermesd_mt.cpp  latency_probe.cpp  run_metadata.cpp  scenario_config.cpp  telemetry_quality.cpp
